--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0">
-            <!-- Центральне фото (Z = -0.1 — найближче до камери) -->
+            <!-- Центральне фото -->
             <a-image src="#photo-texture" position="0 0 -0.1" height="0.75" width="1.0" rotation="0 0 0"></a-image>
             
-            <!-- ✅ БІГУЧА СТРІЧКА ТЕКСТУ з реального контенту ваших ресурсів -->
+            <!-- Бігуча стрічка -->
             <a-entity
                 id="ticker"
                 position="0 -0.2 0.05"
@@ -166,18 +166,18 @@
                 </a-animation>
             </a-entity>
 
-            <!-- Верхній ряд кнопок -->
-            <a-plane id="instagram-btn" class="clickable" width="0.15" height="0.15" position="-0.6 0.4 0.05" rotation="0 0 0" material="src: #instagram-icon; transparent: true; opacity: 1;" aria-label="Instagram — фото та сторіс про AR-проєкти"></a-plane>
-            <a-plane id="youtube-btn" class="clickable" width="0.15" height="0.15" position="-0.3 0.4 0.05" rotation="0 0 0" material="src: #youtube-icon; transparent: true; opacity: 1;" aria-label="YouTube канал Smart Lessa — навчальні відео, огляди AR-проєктів, інструкції та ідеї для використання доповненої реальності в освіті та розвагах."></a-plane>
-            <a-plane id="telegram-btn" class="clickable" width="0.15" height="0.15" position="0.0 0.4 0.05" rotation="0 0 0" material="src: #telegram-icon; transparent: true; opacity: 1;" aria-label="AR_HUB — простір інноваційного навчання та розваг! Матеріали для дітей та дорослих, AR-технології, розважальні інтерактивні проєкти. Space for innovative learning and entertainment! AR technologies, Entertaining interactive projects."></a-plane>
-            <a-plane id="google-btn" class="clickable" width="0.15" height="0.15" position="0.3 0.4 0.05" rotation="0 0 0" material="src: #googlesites-icon; transparent: true; opacity: 1;" aria-label="QuestARia — квести, що оживають у твоєму смартфоні! AR-квести – це новий підхід до навчання! Розвивають логічне мислення, увагу, пам’ять. Навчання через гру, а не примус. 85% дітей краще засвоюють матеріал через гру!"></a-plane>
+            <!-- Верхній ряд кнопок (зміщені ближче до центру) -->
+            <a-plane id="instagram-btn" class="clickable" width="0.15" height="0.15" position="-0.4 0.3 0.05" rotation="0 0 0" material="src: #instagram-icon; transparent: true; opacity: 1;" aria-label="Instagram — фото та сторіс про AR-проєкти"></a-plane>
+            <a-plane id="youtube-btn" class="clickable" width="0.15" height="0.15" position="-0.15 0.3 0.05" rotation="0 0 0" material="src: #youtube-icon; transparent: true; opacity: 1;" aria-label="QuestARia – квести, що оживають у твоєму смартфоні! AR-квести – це новий підхід до навчання! Розвивають логічне мислення, увагу, пам’ять. Навчання через гру, а не примус."></a-plane>
+            <a-plane id="telegram-btn" class="clickable" width="0.15" height="0.15" position="0.15 0.3 0.05" rotation="0 0 0" material="src: #telegram-icon; transparent: true; opacity: 1;" aria-label="AR_HUB — простір інноваційного навчання та розваг! Матеріали для дітей та дорослих, AR-технології, розважальні інтерактивні проєкти. Space for innovative learning and entertainment! AR technologies, Entertaining interactive projects."></a-plane>
+            <a-plane id="google-btn" class="clickable" width="0.15" height="0.15" position="0.4 0.3 0.05" rotation="0 0 0" material="src: #googlesites-icon; transparent: true; opacity: 1;" aria-label="QuestARia – квести, що оживають у твоєму смартфоні! AR-квести – це новий підхід до навчання! Розвивають логічне мислення, увагу, пам’ять. Навчання через гру, а не примус. 85% дітей краще засвоюють матеріал через гру!"></a-plane>
             
             <!-- Нижній ряд кнопок -->
             <a-plane id="play-video-btn" class="clickable" width="0.15" height="0.15" position="-0.6 -0.4 0.05" rotation="0 0 0" material="src: #play-icon; transparent: true; opacity: 1;" aria-label="Відтворити відео"></a-plane>
             <a-plane id="game-btn" class="clickable" width="0.15" height="0.15" position="0.0 -0.4 0.05" rotation="0 0 0" material="src: #goy-icon; transparent: true; opacity: 1;" aria-label="Розпочати освітню гру"></a-plane>
             <a-plane id="gallery-btn" class="clickable" width="0.15" height="0.15" position="0.6 -0.4 0.05" rotation="0 0 0" material="src: #play2-icon; transparent: true; opacity: 1;" aria-label="Переглянути галерею фото"></a-plane>
 
-            <!-- Відео — виїжджає ЗВЕРХУ, ПОЗАДУ фото (початок: Y=-0.5, Z=0.1) -->
+            <!-- Відео -->
             <a-video 
                 id="ar-video" 
                 src="#lesa-video" 
@@ -188,7 +188,7 @@
                 autoplay>
             </a-video>
 
-            <!-- Галерея фото — виїжджає ЗНИЗУ, ПОЗАДУ фото (початок: Y=-0.5, Z=0.1) -->
+            <!-- Галерея фото -->
             <a-plane 
                 id="gallery-plane" 
                 width="1.6" 
@@ -222,6 +222,12 @@
             const galleryPrev = document.getElementById('gallery-prev');
             const galleryNext = document.getElementById('gallery-next');
             const closeGalleryUI = document.getElementById('close-gallery-ui');
+
+            // 🔍 Перевірка, чи знайдені елементи
+            if (!playVideoBtn) console.error('❗ Кнопка відео не знайдена!');
+            if (!gameBtn) console.error('❗ Кнопка гри не знайдена!');
+            if (!galleryBtn) console.error('❗ Кнопка галереї не знайдена!');
+            if (!galleryPlaneEl) console.error('❗ Площина галереї не знайдена!');
 
             let isQuizActive = false;
             let currentQuestionIndex = 0;
@@ -326,11 +332,12 @@
 
             // ✅ ВІДЕО: Виїжджає з-під фото вгору
             playVideoBtn.addEventListener('click', () => {
+                console.log("🎬 Клік по кнопці ВІДЕО");
                 arVideoEl.setAttribute('visible', true);
-                arVideoEl.setAttribute('position', '0 -0.5 0.1'); // Скидаємо на початкову позицію
+                arVideoEl.setAttribute('position', '0 -0.5 0.1');
                 arVideoEl.setAttribute('animation__appear', {
                     property: 'position',
-                    to: '0 1.2 0.1', // Вгору, позаду фото
+                    to: '0 1.2 0.1',
                     dur: 700,
                     easing: 'easeOutCubic',
                     delay: 200
@@ -343,7 +350,7 @@
                     videoElement.onended = () => {
                         arVideoEl.setAttribute('animation__disappear', {
                             property: 'position',
-                            to: '0 -0.5 0.1', // Повертається під фото
+                            to: '0 -0.5 0.1',
                             dur: 500,
                             easing: 'easeInQuad'
                         });
@@ -356,6 +363,7 @@
 
             // ✅ ГРА: Відкриває вікторину
             gameBtn.addEventListener('click', () => {
+                console.log("🎮 Клік по кнопці ГРА");
                 if (!isQuizActive) {
                     startQuiz();
                 }
@@ -363,11 +371,12 @@
 
             // ✅ ГАЛЕРЕЯ: Виїжджає з-під фото вниз
             galleryBtn.addEventListener('click', () => {
+                console.log("🖼️ Клік по кнопці ГАЛЕРЕЯ");
                 galleryPlaneEl.setAttribute('visible', true);
-                galleryPlaneEl.setAttribute('position', '0 -0.5 0.1'); // Скидаємо на початкову позицію
+                galleryPlaneEl.setAttribute('position', '0 -0.5 0.1');
                 galleryPlaneEl.setAttribute('animation__appear', {
                     property: 'position',
-                    to: '0 -0.8 0.1', // Вниз, позаду фото
+                    to: '0 -0.8 0.1',
                     dur: 600,
                     easing: 'easeOutCubic',
                     delay: 200
@@ -378,7 +387,7 @@
             galleryPlaneEl.addEventListener('click', () => {
                 galleryPlaneEl.setAttribute('animation__return', {
                     property: 'position',
-                    to: '0 -0.5 0.1', // Повертається під фото
+                    to: '0 -0.5 0.1',
                     dur: 400,
                     easing: 'easeInQuad'
                 });
